Created lecture notes beginnign for dsa with scrollspy

--- a/css/dsaSection1LectureStyle.css
+++ b/css/dsaSection1LectureStyle.css
@@ -3,9 +3,12 @@ h1{
 	text-align: center;
 }
 
-#topic_list, nav{
+h4{
+	text-align: center;
+}
+
+#resources_list, nav{
 	width: 50%;
 	margin-left: 25%;
-	margin-top: 10vh;
 	text-align: center;
 }
